# mcu-rust

./: .gitignore  devenv.nix  justfile  license  readme.md
.helix/: config.toml  languages.toml
blink_v2/: Cargo.toml
blink_v2/src/: main.rs
blinky/: Cargo.toml  blinky.rs
blinky/.cargo/: config.toml
dac/: Cargo.toml
dac/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
guessing_game/src/: main.rs
hello-world/: Cargo.toml
hello/src/: lib.rs  main.rs
mcu-lib/: Cargo.toml  readme.md
mcu-lib/src/: lib.rs
mcu-lib/tests/: integration.rs
minigrep/src/: lib.rs  main.rs
minigrep/tests/: integration.rs
rp2040-hal/: Cargo.toml
rp2040-hal/src/: main.rs
spi/: Cargo.toml  spi.rs
spi/src/: main.rs
