[package]
name = "blink_v2"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["rt", "rom-v2-intrinsics", "defmt", "rtic-monotonic"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
cortex-m = "0.7"
# cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
# embedded-hal = { version = "0.2.5", features = ["unproven"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.8"
panic-halt = "0.2.0"
rp2040-hal = "0.10.0"
rp2040-boot2 = "0.2.1"
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }
critical-section = { version = "1.0.0" }

[features]
rt = ["rp2040-pac/rt"]
critical-section-impl = ["critical-section/restore-state-u8"]
required-features = ["rt", "critical-section-impl"]
