[package]
name = "spi"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
# embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-hal = "1.0.0"
fugit = "0.3.6"
rp2040-hal = "0.7.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.1"

[[bin]]
name = "spi"
path = "spi.rs"
